--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         <!-- Portfolio-->
         <ul class="list">
           <li>
-            <a class="link" href="">
+           <a href="" class="link">
               <img
                 src="./images/portfolio/img(p1).jpg"
                 alt="Bank App"
